--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,16 +16,19 @@ const testimonialsData = [
     text: "“La calidad y el sonido de los instrumentos de este taller son incomparables. Cada pieza es una obra de arte que refleja la pasión y dedicación del luthier.”",
     name: "Juan Pérez",
     role: "Músico Profesional",
+    image: "/image.webp",
   },
   {
     text: "“He comprado varios instrumentos aquí y siempre he quedado satisfecho con el resultado. La atención al detalle es excepcional.”",
     name: "María López",
     role: "Profesora de Música",
+    image: "/image.webp",
   },
   {
     text: "“El proceso de personalización fue increíble. Recibí un instrumento que no solo suena increíble, sino que también es visualmente impresionante.”",
     name: "Carlos Rodríguez",
     role: "Compositor",
+    image: "/image.webp",
   },
 ];
 
