--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,8 +2,11 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<footer class="bg-zinc-900  m-4 rounded-xl px-10 text-white py-10">
+<footer class="bg-zinc-900 m-4 rounded-xl px-10 text-white py-10">
   <div class="container mx-auto px-4 text-center">
-    <p>Di Corato - Instrumentos de cuerda pulsada. Año {currentYear}</p>
+    <p class="text-sm text-zinc-400">
+      Archivo {currentYear} recuperado de una línea de tiempo colapsada.<br />
+      Hiperstición: Todo lo que aún no ocurrió… pero insiste en manifestarse.
+    </p>
   </div>
 </footer>
