--- a/src/pages/instrumentos-anomalos.astro
+++ b/src/pages/instrumentos-anomalos.astro
@@ -1,4 +1,20 @@
 ---
+import "../styles/global.css";
+import Layout from "../layouts/Layout.astro";
+import Header from "../components/Header.astro";
+import Footer from "@components/Footer.astro";
+---
+
+<Layout title="Instrumentos Anómalos">
+  <Header />
+  <main
+    class="mx-auto bg-center bg-zinc-900 py-10 md:rounded-xl container h-full max-w-full sm:max-w-[40rem] md:max-w-[48rem] lg:max-w-[64rem] xl:max-w-[80rem] mt-20 z-10"
+  >
+  </main>
+  <Footer />
+</Layout>
+
+<!-- ---
 // src/components/Hero.astro
 
 interface HeroProps {
@@ -6,19 +22,19 @@ interface HeroProps {
   subtitle: string;
 }
 const { title, subtitle } = Astro.props as HeroProps;
----
+--- -->
 
-<section
+<!-- <section
   class=" relative flex flex-col items-center justify-center bg-cover bg-center bg-zinc-900 py-10 md:rounded-xl container h-[400px] max-w-2xl md:max-w-[48rem] lg:max-w-[64rem] xl:max-w-[80rem] mx-auto mt-20 z-10"
 >
-  <!-- Imagen -->
+  
   <div
     class="absolute inset-0 bg-[url('/image.webp')] bg-cover bg-center opacity-50 md:rounded-xl saturate-150 "
   >
   </div>
-  <!-- Textos -->
+  
   <div class="relative z-10 text-center">
     <h1 class="text-white text-4xl md:text-9xl font-bold">{title}</h1>
     <p class="text-white text-xl md:text-2xl mt-4">{subtitle}</p>
   </div>
-</section>
+</section> -->
