--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -13,25 +13,31 @@ interface Props {
 const { testimonials } = Astro.props as Props;
 ---
 
-<section class="relative isolate overflow-hidden bg-white px-6 py-24 sm:py-32 lg:px-8 my-10 max-w-7xl mx-auto md:rounded-xl">
+<section class="relative isolate overflow-hidden bg-white dark:bg-zinc-950  px-6 py-24 sm:py-32 lg:px-8 my-10 mx-auto md:rounded-xl max-w-7xl">
   <div class="absolute inset-0 -z-10 bg-[radial-gradient(45rem_50rem_at_top,var(--color-zinc-500),var(--color-zinc-950))] opacity-[15%] backdrop-blur-2xl"></div>
-  <div class="absolute inset-y-0 right-1/2 -z-10 mr-16 w-[200%] origin-bottom-left skew-x-[-30deg] bg-white ring-1 shadow-xl shadow-zinc-600/40 ring-zinc-700/10 sm:mr-28 lg:mr-0 xl:mr-16 xl:origin-center"></div>
+  <div class="absolute inset-y-0 right-1/2 -z-10 mr-16 w-[200%] origin-bottom-left skew-x-[-30deg] bg-white dark:bg-zinc-950 ring-1 shadow-xl shadow-zinc-600/40 ring-zinc-700/10 sm:mr-28 lg:mr-0 xl:mr-16 xl:origin-center"></div>
+
   <div class="mx-auto max-w-2xl lg:max-w-7xl space-y-10">
-    <img class="mx-auto h-12" src="/public/image.webp" alt="Logo de Luthería" />
-    <div class="mt-10 grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3">
+    <!-- <img class="mx-auto h-12" src="/image.webp" alt="Símbolo de Hiperstición" /> -->
+
+    <div class="mt-10 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-3">
       {testimonials.map((testimonial) => {
         return (
-          <figure class="bg-gray-50 p-6 rounded-lg flex flex-col justify-between">
-            <blockquote class="text-center text-xl/8 font-semibold text-zinc-800 sm:text-xl/9">
-              <p>{testimonial.text}</p>
+          <figure class="bg-zinc-50 dark:bg-zinc-900 p-6 rounded-lg flex flex-col justify-between shadow-inner shadow-zinc-200/40 dark:shadow-zinc-800/30 border border-zinc-100 dark:border-zinc-800">
+            <blockquote class="text-center text-xl/8 font-medium text-zinc-800 dark:text-zinc-100 sm:text-xl/9 italic">
+              <p>"{testimonial.text}"</p>
             </blockquote>
-            <figcaption class="mt-6 flex items-center justify-center space-x-3 text-base">
-              <img class="size-10 rounded-full" src={testimonial.image} alt={`Imagen de ${testimonial.name}`} />
-              <div class="font-semibold text-gray-900">{testimonial.name}</div>
-              <svg viewBox="0 0 2 2" width="3" height="3" aria-hidden="true" class="fill-gray-900">
+            <figcaption class="mt-6 flex flex-col items-center justify-center space-x-2 text-base">
+              <img
+                class="size-10 rounded-full ring-2 ring-zinc-300 dark:ring-zinc-700 object-cover"
+                src={testimonial.image}
+                alt={`Imagen de ${testimonial.name}`}
+              />
+              <div class="font-semibold text-gray-900 dark:text-white">{testimonial.name}</div>
+              {/* <svg viewBox="0 0 2 2" width="10" height="10" aria-hidden="true" class="fill-gray-900 dark:fill-gray-300">
                 <circle cx="1" cy="1" r="1"></circle>
-              </svg>
-              <div class="text-gray-600">{testimonial.role}</div>
+              </svg> */}
+              <div class="text-gray-600 dark:text-gray-400 text-xs">{testimonial.role}</div>
             </figcaption>
           </figure>
         );
